--- a/projectEN.html
+++ b/projectEN.html
@@ -30,6 +30,15 @@
 
 
         <section class="projects">
+
+            <div class="project" >
+                <div class="intro">
+                    <h1> Geographic Information System - Summer 2020 </h1>
+                    <p> NRCan uses satellite imagery to actively monitor spring flooding and ice breakup to produce near real-time maps to support emergency response activities in Canada. The development of algorithms, techniques and software for data processing is an important task. I have worked on processing Rasters using GDAL to produce polygons representing open water flooding and flooded vegetation. I developed Python scripts to apply automated algorithms related to remote sensing systems and to ensure their quality and reliability through unit tests.  </p>
+                    <p> For more details, you can visit <a href="https://www.nrcan.gc.ca/simply-science/21898">Mapping a Flood</a>. </p>
+                </div>
+                <div class="projectPicture">  <img src="project5-1.png" /> </div>
+            </div>
             
             <div class="project" >
                 <div class="intro">
