--- a/projectFR.html
+++ b/projectFR.html
@@ -30,6 +30,15 @@
 
 
         <section class="projects">
+
+            <div class="project" >
+                <div class="intro">
+                    <h1> Système d'information géographique - Été 2020 </h1>
+                    <p> RNCan utilise l’imagerie satellitaire pour surveiller activement les inondations et les débâcles de glace au printemps afin de produire des cartes géographiques en temps quasi réel pour appuyer les activités d’intervention d’urgence au Canada. Le développement des algorithmes, des techniques et des logiciels pour le traitement des données est une tâche importante. J'ai travaillé sur le traitement de Rasters à l'aide de GDAL afin de produire des polygones représentant les inondations en eau libre et la végétation inondée. J'ai développé des scripts Python pour appliquer des algorithmes automatisés liées aux systèmes de télédétection ainsi que d'en assurer la qualité et la fiabilité à l'aide de tests unitaires.  </p>
+                    <p> Pour plus de détail, vous pouvez visiter <a href="https://www.rncan.gc.ca/science-simplement/21899">Cartographie des inondations</a>. </p>
+                </div>
+                <div class="projectPicture">  <img src="project5-1.png" /> </div>
+            </div>
             
             <div class="project" >
                 <div class="intro">
