--- a/resumeFR.html
+++ b/resumeFR.html
@@ -42,6 +42,7 @@
             <p> Université d'Ottawa, Ottawa, Ontario <br> septembre 2018 - présent </p>
             <ul> 
                 <li> Obtention du diplôme prévu en décembre 2022 </li>
+                <li> MPC de 9,12 </li>
                 <li> Obtenu une bourse d'admission avec une moyenne académique de 80% </li>
                 <li> Obtenu une bourse pour l'accès aux études en français </li>
                 <li> Obtenu une bourse au mérite </li>
@@ -62,26 +63,26 @@
             <h1> Compétences </h1>
             <h2> Programmation </h2>
             <ul> 
-                <li> Bonne connaissance de Java et de Python </li>
+                <li> Bonne connaissance de Python, Java </li>
+                <li> Connaissance de base en SQL, Go, Prolog, Scheme
                 <li> Programmer en orienté-objet dans un traitement itératif et récursif </li>
+                <li> Appliquer les paradigmes de programmations : concurrent, logique, fonctionnelle </li>
                 <li> Apprendre le concept de polymorphisme, d’abstraction et d’héritage </li>
                 <li> Analyser la complexité des types de données abstraites en particulier sur les arbres, mais aussi sur les structures  chainées pour mettre en place des files et des piles </li>
-                <li> Développer une interface graphique pour de petits jeux tels que Tic-Tac-Toe et  Lights-out </li>
-            </ul>
-            <h2> Conception de logiciels </h2>
-            <ul> 
+                <li> Apprendre les structures discrètes, analyser et concevoir des algorithmes </li>
+                <li> Développer une interface graphique pour de petits jeux tels que Tic-Tac-Toe et Lights-out </li>
+                <li> Élaborer une base de donnée et en faire le diagram ER et la normalisation </li>
                 <li> Modeler les interactions et les comportements de différentes architectures en utilisant le UML </li>
                 <li> Étudier les processus du génie logiciel et les types de cadriciels </li>
-                <li> Créer une application Android dans un projet de groupe pour gérer les rendez-vous d’une clinique </li>
-            </ul>
-            <h2> Architecture d’ordinateur </h2>
-            <ul> 
+                <li> Créer une application Android dans un projet de groupe pour gérer les rendez-vous d’une clinique </li> 
                 <li> Analyser, concevoir et mettre en place des circuits combinatoires et séquentiels à l’aide de la logique Booléenne </li>
                 <li> Utiliser et convertir des systèmes de numération : binaire, octale, décimale et hexadécimale </li>
                 <li> Concevoir une machine à calculer en utilisant Quartus pour mettre en oeuvre le transfert de registre, les micro-opérations et le contrôle UCT </li>
+                <li> Résoudre des petits problèmes avec Raspberry Pi </li>
             </ul>
             <h2> Mathématiques </h2>
             <ul> 
+                <li> Apprendre la théorie des graphes, les relations de récurrence et les applications cryptographiques de base </li>
                 <li> Analyser les fonctions avec les dérivées et les techniques d’intégration, pour développer les intégrales impropres, les dérivées partiels, les séquences et les séries </li>
                 <li> Appliquer les espaces vectoriels et les matrices à la géométrie, les réseaux et les équations différentiels </li>
                 <li> Évaluer les structures discrètes et la théorie des graphes appliqués à l’informatique </li>
@@ -93,6 +94,7 @@
                 <li> Reconnaitre les structures et les fonctions de cellules et des organites </li>
                 <li> Apprendre l’organisation, la réplication et l’expression du matériel génétique </li>
                 <li>Démontrer le principe de l’évolution de la biodiversité</li>
+                <li> Calculer les propriétés mécaniques des systèmes biologique, les forces motrices et l'auto-organisation des cellules </li>
                 <li> Appliquer la mécanique de Newton, le travail, le mouvement et le transfert d’énergie </li>
                 <li> Apprendre la théorie des ondes, l’optique géométrique et la physique moderne </li>
                 <li> Tester la théorie des circuits et des champs magnétiques </li>
@@ -102,10 +104,22 @@
             </ul>
 
             <h1> Expérience de travail </h1>
-            <h2> Assistant chercheur, Sciences informatiques </h2>
-            <p> Université d’Ottawa, VIVA Lab, Ottawa, Ontario<br> juin 2017 - août 2018 </p>
+
+            <h2> Développeur de systèmes géomatiques </h2>
+            <p> Ressources Naturelles Canada, Service de Géomatique d’Urgence, Ottawa, Ontario <br> juin 2020 - avril 2021 </p>
             <ul>
-                <li> Effectuer une recherche en intelligence artificielle sur la vision informatique </li>
+                <li> Développer des scripts Python pour automatiser le traitement de données provenant de systèmes de télédétection pour cartographier les inondations </li>
+                <li> Travailler avec des librairies de système d'information géographique tel que GDAL, ArcGIS et PCI </li>
+                <li> Remanier et améliorer du code pour adapter la base de code EGS aux exigences changeantes </li>
+                <li> Documenter et organiser des données pour traiter les images provenant de satellites Radarsat-2, Sentinel-1 et RCM </li>
+                <li> Traiter et filtrer des Rasters pour obtenir des polygones pouvant être superposés sur des cartes géographiques </li>
+                <li> Développer des tests unitaires utilisant la librairie Python Unittest </li>
+            </ul>
+
+            <h2> Assistant chercheur, Sciences informatiques </h2>
+            <p> Université d’Ottawa, VIVA Lab, Ottawa, Ontario <br> juin 2017 - août 2018 </p>
+            <ul>
+                <li> Effectuer le prétraitement de données pour la recherche en intelligence artificielle sur la vision informatique </li>
                 <li> Manipuler des fichiers Json et créer des scripts sur le contrôle de base de données locales en Python </li>
                 <li> Extraire et traiter des images avec OpenCV </li>
                 <li> Travailler avec des librairies python tel que PIL, matplotlib et numpy </li>
@@ -113,7 +127,7 @@
 
             <h1> Expérience de travail supplémentaire </h1>
             <h2> Cuisinier </h2>
-            <p> Resto Bistro Rumeur, Gatineau, Québec <br> avril 2019 - présent </p>
+            <p> Resto Bistro Rumeur, Gatineau, Québec <br> avril 2019 - décembre 2019 </p>
             <ul>
                 <li> Développer la collaboration en équipe afin de préparer et gérer des services 4 étoiles </li>
                 <li> Acquérir la compétence de travailler sous pression pendant le service de banquets d'environ 75 personnes </li>
