--- a/resumeEN.html
+++ b/resumeEN.html
@@ -41,6 +41,7 @@
             <p> University of Ottawa, Ottawa, Ontario <br> September 2018 - present </p>
             <ul> 
                 <li> Graduation planned in December 2022 </li>
+                <li> GPA of 9.12 </li>
                 <li> Received admission scolarship for an average over 80% </li>
                 <li> Renewable bursary for French studies </li>
                 <li> Received a merit scholarship </li>
@@ -59,28 +60,28 @@
             </ul>
 
             <h1> Skills </h1>
-            <h2> Programming </h2>
+            <h2> Computer Science </h2>
             <ul> 
-                <li> Good knowledge of Java and Python </li>
+                <li> Good knowledge of Python, Java </li>
+                <li> Basic knowledge of SQL, Go, Prolog, Scheme </li>
                 <li> Programmed in object-oriented in an iterative and recursive processing </li>
+                <li> Applied programming paradigm : concurrent, logic, functional </li>
                 <li> Learned the concept of polymorphism, abstraction and inheritance </li>
                 <li> Analyzed the complexity of abstract data types especially on trees, but also on linked structure to implements queues and stacks </li>
+                <li> Learned discrete structures, algorithm analysis and design </li>
                 <li> Developed graphical user interface of small games such as Tic-Tac-Toe and Lights-out </li>
-            </ul>
-            <h2> Software Design </h2>
-            <ul> 
+                <li> Elaborated a database and make the ER diagram and normalization </li>
                 <li> Modeled interactions and behaviour of different architecture design using UML </li>
                 <li> Studied software engineering process and type of frameworks </li>
                 <li> Created an Android application in a group project to managed clinic appointment </li>
-            </ul>
-            <h2> Computer Architecture </h2>
-            <ul> 
                 <li> Analyzed, designed and implemented combinational and sequential circuits with Boolean algebra </li>
                 <li> Used and converted numeral systems: binary, octal, decimal and hexadecimal </li>
                 <li> Designed a digital computer using Quartus to implement register transfer, microoperation and CPU control </li>
+                <li> Solved mini project with Raspberry Pi
             </ul>
             <h2> Mathematics </h2>
             <ul> 
+                <li> Learned graph theory, recurrence relations and basic cryptographical applications </li>
                 <li> Analyzed functions with derivates and techniques of integration, to develop improper integrals, partial derivates, sequences and series </li>
                 <li> Applied vector spaces and matrix algebra to the geometry, networks and differential equations </li>
                 <li> Evaluated discrete structures and graph theory applied to computing </li>
@@ -92,6 +93,7 @@
                 <li> Recognized the structure and the varieties of cell </li>
                 <li> Learned the replication, transcription and translation of DNA </li>
                 <li>Demonstrated the fundamentals of the evolution of biological diversity</li>
+                <li> Calculated mechanical properties of biological systems, cellular motor forces and self-organization of cells </li>
                 <li> Applied Newton’s laws, motion and energy transfer </li>
                 <li> Learned the wave theory, geometrical optics and modern physics </li>
                 <li> Tested circuit theory and magnetic field </li>
@@ -100,12 +102,23 @@
                 <li>Classified and identified the structural characterization of organic compounds</li>
             </ul>
 
-
             <h1> Work Experience </h1>
+
+            <h2> Geomatics systems developer </h2>
+            <p> Natural Resources Canada, Emergency Geomatics Service, Ottawa, Ontario <br> June 2020 - April 2021 </p>
+            <ul>
+                <li> Developped Python scripts to automate the processing of data from remote sensing systems to map floods </li>
+                <li> Worked with Geographic Information System libraries such as GDAL, ArcGIS and PCI </li>
+                <li> Redesigned and improved code to adapt the EGS code base to the changing requirements </li>
+                <li> Documented and organized data to process images from Radarsat-2, Sentinel-1 and RCM satellites </li>
+                <li> Processed and filtered Rasters to obtain polygons that can be superimposed on maps </li>
+                <li> Developed unit tests using the Python Unittest library </li>
+            </ul>
+
             <h2> Research intern, Computer Science </h2>
             <p> University of Ottawa, VIVA Lab, Ottawa, Ontario <br> June 2017 - August 2018 </p>
             <ul>
-                <li> Performed research in artificial intelligence using computer vision </li>
+                <li> Pre processed data to help research in computer vision using video processing and image analysis </li>
                 <li> Manipulated Json file and created script for local database control in Python </li>
                 <li> Extracted and processed images with OpenCV </li>
                 <li> Worked with python library like PIL, matplotlib and numpy </li>
@@ -113,7 +126,7 @@
 
             <h1> Other Work Experience </h1>
             <h2> Cook </h2>
-            <p> Resto Bistro Rumeur, Gatineau, Québec <br> april 2019 - present </p>
+            <p> Resto Bistro Rumeur, Gatineau, Québec <br> April 2019 - December 2019 </p>
             <ul>
                 <li> Developped team collaboration in order to prepare and manage 4-star services </li>
                 <li> Acquired the competence to work under pressure while serving banquet of approximately 75 persons </li>
