update bug layout

--- a/resumeFR.html
+++ b/resumeFR.html
@@ -21,8 +21,8 @@
                     <li> <a href="presentationFR.html"> Présentation </a> </li>
                     <li> <a href="resumeFR.html"> Curriculum Vitae </a> </li>
                     <li> <a href="projectFR.html"> Projets </a> </li>
-                    <li style="float:right;"> <a href="https://www.linkedin.com/in/simon-paquette-7533b6197/"> LinkedIn </a> </li>
-                    <li style="float:right;"> <a href="https://github.com/SimonPaquette"> GitHub </a> </li>
+                    <li style="float:right;"> <a href="https://www.linkedin.com/in/simon-paquette-7533b6197/" target="_blank"> LinkedIn </a> </li>
+                    <li style="float:right;"> <a href="https://github.com/SimonPaquette" target="_blank"> GitHub </a> </li>
                 </ul>
             </div>
 
