--- a/resumeEN.html
+++ b/resumeEN.html
@@ -21,8 +21,8 @@
                     <li> <a href="index.html"> Presentation </a> </li>
                     <li> <a href="resumeEN.html"> Resume </a> </li>
                     <li> <a href="projectEN.html"> Projects </a> </li>
-                    <li style="float:right;"> <a href="https://www.linkedin.com/in/simon-paquette-7533b6197/"> LinkedIn </a> </li>
-                    <li style="float:right;"> <a href="https://github.com/SimonPaquette"> GitHub </a> </li>
+                    <li style="float:right;"> <a href="https://www.linkedin.com/in/simon-paquette-7533b6197/" target="_blank"> LinkedIn </a> </li>
+                    <li style="float:right;"> <a href="https://github.com/SimonPaquette" target="_blank"> GitHub </a> </li>
                 </ul>
             </div>
 
