--- a/projectFR.html
+++ b/projectFR.html
@@ -31,22 +31,31 @@
 
         <section class="projects">
 
+        	<div class="project" >
+                <div class="intro">
+                    <h1> NRCan Docker pour les inondations - Hiver 2021 </h1>
+                    <p> Afin de faciliter le développement, le déploiement du code sur tout environnement et la possibilité d'effectuer plusieurs processus en parallèle, j'ai développé une image Docker capable d'exécuter le traitement automatique d'images dans un conteneur isolé. Celle-ci intègre divers scripts de traitement d'images, plusieurs librairies open source telles que ESA SNAP ainsi que du code permettant de télécharger des données provenant de AWS et NRCan EODMS API (voir image ci-contre). </p>
+                    <p> Pour plus de détail, vous pouvez visiter <a href="https://hub.docker.com/r/egssgu/sar-flood" target="_blank">DockerHub</a>. </p>
+                </div>
+                <div class="projectPicture">  <img src="project6.png" /> </div>
+            </div>
+
             <div class="project" >
                 <div class="intro">
                     <h1> Système d'information géographique - Été 2020 </h1>
                     <p> RNCan utilise l’imagerie satellitaire pour surveiller activement les inondations et les débâcles de glace au printemps afin de produire des cartes géographiques en temps quasi réel pour appuyer les activités d’intervention d’urgence au Canada. Le développement des algorithmes, des techniques et des logiciels pour le traitement des données est une tâche importante. J'ai travaillé sur le traitement de Rasters à l'aide de GDAL afin de produire des polygones représentant les inondations en eau libre et la végétation inondée. J'ai développé des scripts Python pour appliquer des algorithmes automatisés liées aux systèmes de télédétection ainsi que d'en assurer la qualité et la fiabilité à l'aide de tests unitaires.  </p>
                     <p> Pour plus de détail, vous pouvez visiter <a href="https://www.rncan.gc.ca/science-simplement/21899" target="_blank">Cartographie des inondations</a>. </p>
                 </div>
-                <div class="projectPicture">  <img src="project5-1.png" /> </div>
+                <div class="projectPicture">  <img src="project5.png" /> </div>
             </div>
             
             <div class="project" >
                 <div class="intro">
                     <h1> Application Android - Automne 2019</h1>
-                    <p> Lors d'un projet d'équipe en cours d'introduction au génie logiciel, j'ai développer une application android pour la gestion de rendez-vous dans des cliniques. J'ai travaillé sur le back-end en Java et sur la gestion d'une base de données en temps réel en utilisant Firebase.  </p>
-                    <p> Pour plus de détail, vous pouvez visualiser un exemple du code. <a href="NouveauService.java" target="_blank"> Ici</a>, c'est le code qui permet de créer un nouveau service, enregistré dans la base de donnée. </p>
+                    <p> Lors d'un projet d'équipe en cours d'introduction au génie logiciel, j'ai développé une application android pour la gestion de rendez-vous dans des cliniques. J'ai travaillé sur le back-end en Java et sur la gestion d'une base de données en temps réel en utilisant Firebase.  </p>
+                    <p> Pour plus de détail, vous pouvez visualiser un exemple du code. <a href="NouveauService.java" target="_blank"> Ici</a>, c'est le code qui permet de créer un nouveau service, enregistré dans la base de données. </p>
                 </div>
-                <div class="projectPicture">  <img src="project4-1.png" /> </div>
+                <div class="projectPicture">  <img src="project4.png" /> </div>
             </div>
 
             <div class="project" >
@@ -55,25 +64,25 @@
                     <p> Lors d'un cours d'introduction à l'informatique, j'ai conçu un petit jeu en utilisant le patron MVC en Java. J'ai développé mes compétences en interface utilisateur et développé ma compréhension de l'algorithme de parcours en largeur. </p>
                     <p> Pour plus de détail, vous pouvez visualiser un exemple du code. <a href="LightsOut.java" target="_blank"> Ici</a>, c'est le code qui applique l'algorithme de parcours en largeur. <a href="GameController.java"> Ici</a>, c'est le code qui représente le model Controller de l'interface. </p>
                 </div>
-                <div class="projectPicture">  <img src="project3-1.png" /> </div>
+                <div class="projectPicture">  <img src="project3.png" /> </div>
             </div>
 
             <div class="project" >
                 <div class="intro">
                     <h1> Les matrices - Automne 2018 </h1>
-                    <p> Suite à mon cours d'algèbre linéaire, j'ai développer un petit programme en Python capable de faire diverses opérations sur les matrices. Ceci m'a permis de travailler sur des tableaux en 2D tout en pratiquant des bases mathématiques tels que l'échelonnage d'une matrice et calculer son déterminant. </p>
+                    <p> Suite à mon cours d'algèbre linéaire, j'ai développé un petit programme en Python capable de faire diverses opérations sur les matrices. Ceci m'a permis de travailler sur des tableaux en 2D tout en pratiquant des bases mathématiques tels que l'échelonnage d'une matrice et calculer son déterminant. </p>
                     <p> Pour plus de détail, vous pouvez visualiser l'intégralité du code. <a href="matrice.py" target="_blank"> Ici</a>, le code regroupe les opérations possibles. </p>
                 </div>
-                <div class="projectPicture">  <img src="project2-1.png" /> </div>
+                <div class="projectPicture">  <img src="project2.png" /> </div>
             </div>
 
             <div class="project" >
                 <div class="intro">
                     <h1> Traitement d'images - Été 2018 </h1>
-                    <p> Lors de mon emploi auprès de VIVA Lab, j'ai travaillé sur divers techniques d'extraction et de traitement sur une grande quantité d'images avec Python. J'ai dû effectuer des comparaisons d'images à l'aide des couleurs avec OpenCV ou PIL ainsi que des représentations graphiques sur des données en fichier Json avec matplotlib.  </p>
+                    <p> Lors de mon emploi auprès de VIVA Lab, j'ai travaillé sur diverses techniques d'extraction et de traitement sur une grande quantité d'images avec Python. J'ai dû effectuer des comparaisons d'images à l'aide des couleurs avec OpenCV ou PIL ainsi que des représentations graphiques sur des données en fichier Json avec matplotlib.  </p>
                     <p> Pour plus de détail, vous pouvez visualiser un exemple du code. <a href="color_identification.py" target="_blank"> Ici</a>, c'est le code utile comparer des images de cyclistes. Le principe de reconnaissance est basé sur la séparation des images en 4 parties et obtenir leurs histogrammes afin de les comparer avec d'autres images pour évaluer leur ressemblance. </p>
                 </div>
-                <div class="projectPicture">  <img src="project1-1.png" /> </div>
+                <div class="projectPicture">  <img src="project1.png" /> </div>
             </div>
             
         </section>
