--- a/resumeFR.html
+++ b/resumeFR.html
@@ -42,7 +42,7 @@
             <p> Université d'Ottawa, Ottawa, Ontario <br> septembre 2018 - présent </p>
             <ul> 
                 <li> Obtention du diplôme prévu en décembre 2022 </li>
-                <li> MPC de 9,12 </li>
+                <li> MPC de 9,24 </li>
                 <li> Obtenu une bourse d'admission avec une moyenne académique de 80% </li>
                 <li> Obtenu une bourse pour l'accès aux études en français </li>
                 <li> Obtenu une bourse au mérite </li>
@@ -60,18 +60,42 @@
                 <li> Finale régionale du Défi Génie Inventif 2013 </li>
             </ul>
 
+            <h1> Expérience de travail </h1>
+
+            <h2> Développeur de systèmes géomatiques </h2>
+            <p> Ressources Naturelles Canada, Service de Géomatique d’Urgence, Ottawa, Ontario <br> juin 2020 - avril 2021 </p>
+            <ul>
+                <li> Développer des scripts Python pour automatiser le traitement de données provenant de systèmes de télédétection pour cartographier les inondations </li>
+                <li> Travailler avec des librairies de système d'information géographique tel que GDAL, SNAP, ArcGIS et PCI </li>
+                <li> Créer une image Docker capable d'exécuter le traitement automatique d'images dans un conteneur isolé </li>
+                <li> Remanier et améliorer le code pour adapter la base de code EGS aux exigences changeantes de l'utilisation de librairies open source </li>
+                <li> Développer de nouveaux scripts afin de télécharger des données provenant de service web comme AWS et NRCan EODMS API </li>
+                <li> Documenter et organiser des données pour traiter les images provenant de satellites Radarsat-2, Sentinel-1 et RCM </li>
+                <li> Traiter, orthorectifier, extraire et filtrer des Rasters pour obtenir des polygones pouvant être superposés sur des cartes géographiques </li>
+                <li> Développer des tests unitaires utilisant la librairie Python Unittest </li>
+            </ul>
+
+            <h2> Assistant chercheur, Sciences informatiques </h2>
+            <p> Université d’Ottawa, VIVA Lab, Ottawa, Ontario <br> juin 2017 - août 2018 </p>
+            <ul>
+                <li> Effectuer le prétraitement de données pour la recherche en intelligence artificielle sur la vision informatique </li>
+                <li> Manipuler des fichiers Json et créer des scripts sur le contrôle de base de données locales en Python </li>
+                <li> Extraire et traiter des images avec OpenCV </li>
+                <li> Travailler avec des librairies python tel que PIL, matplotlib et numpy </li>
+            </ul>
+
             <h1> Compétences </h1>
             <h2> Programmation </h2>
             <ul> 
-                <li> Bonne connaissance de Python, Java </li>
-                <li> Connaissance de base en SQL, Go, Prolog, Scheme
-                <li> Programmer en orienté-objet dans un traitement itératif et récursif </li>
-                <li> Appliquer les paradigmes de programmations : concurrent, logique, fonctionnelle </li>
-                <li> Apprendre le concept de polymorphisme, d’abstraction et d’héritage </li>
-                <li> Analyser la complexité des types de données abstraites en particulier sur les arbres, mais aussi sur les structures  chainées pour mettre en place des files et des piles </li>
+                <li> Bonne connaissance de Python, Java et de C++ </li>
+                <li> Connaissance de base en SQL, Go, Prolog, Scheme, Ocaml </li>
+                <li> Appliquer les paradigmes de programmations : orienté-objet, impératif, concurrent, logique, fonctionnel </li>
+                <li> Apprendre le concept de récursivité, de langage formel et de pointeurs </li>
+                <li> Analyser la complexité des types de données abstraites en particulier sur les arbres, mais aussi sur les structures chainées pour mettre en place des files et des piles </li>
                 <li> Apprendre les structures discrètes, analyser et concevoir des algorithmes </li>
+                <li> Appliquer des techniques de résolution de problèmes à l'aide d'algorithme de diviser pour régner, dynamique et voraces et évaluer la théorie de la complexité du calcul </li>
                 <li> Développer une interface graphique pour de petits jeux tels que Tic-Tac-Toe et Lights-out </li>
-                <li> Élaborer une base de donnée et en faire le diagram ER et la normalisation </li>
+                <li> Élaborer une base de données et en faire le diagramme ER et la normalisation </li>
                 <li> Modeler les interactions et les comportements de différentes architectures en utilisant le UML </li>
                 <li> Étudier les processus du génie logiciel et les types de cadriciels </li>
                 <li> Créer une application Android dans un projet de groupe pour gérer les rendez-vous d’une clinique </li> 
@@ -86,43 +110,22 @@
                 <li> Analyser les fonctions avec les dérivées et les techniques d’intégration, pour développer les intégrales impropres, les dérivées partiels, les séquences et les séries </li>
                 <li> Appliquer les espaces vectoriels et les matrices à la géométrie, les réseaux et les équations différentiels </li>
                 <li> Évaluer les structures discrètes et la théorie des graphes appliqués à l’informatique </li>
-                <li>Calculer les probabilités de variables aléatoires et analyser les modèles statistiques</li>
+                <li> Calculer les probabilités de variables aléatoires et analyser les modèles statistiques </li>
             </ul>
             <h2> Sciences </h2>
             <ul> 
-                <li> Étudier la communication cellulaire et le cytosquelette</li>
+                <li> Étudier la communication cellulaire et le cytosquelette </li>
                 <li> Reconnaitre les structures et les fonctions de cellules et des organites </li>
                 <li> Apprendre l’organisation, la réplication et l’expression du matériel génétique </li>
-                <li>Démontrer le principe de l’évolution de la biodiversité</li>
+                <li> Démontrer le principe de l’évolution de la biodiversité </li>
+                <li> Appliquer la statistique thermodynamique à des problèmes de conformations, de dynamique et d'assemblage de système biomoléculaires </li>
                 <li> Calculer les propriétés mécaniques des systèmes biologique, les forces motrices et l'auto-organisation des cellules </li>
                 <li> Appliquer la mécanique de Newton, le travail, le mouvement et le transfert d’énergie </li>
                 <li> Apprendre la théorie des ondes, l’optique géométrique et la physique moderne </li>
                 <li> Tester la théorie des circuits et des champs magnétiques </li>
-                <li>Étudier la relativité restreinte et la physique nucléaire</li>
-                <li> Analyser les principes de chimie, la vitesse de réaction et l’équilibre chimique en laboratoire</li>
-                <li>Classer et identifier la caractérisation structurale des composés organiques</li>
-            </ul>
-
-            <h1> Expérience de travail </h1>
-
-            <h2> Développeur de systèmes géomatiques </h2>
-            <p> Ressources Naturelles Canada, Service de Géomatique d’Urgence, Ottawa, Ontario <br> juin 2020 - avril 2021 </p>
-            <ul>
-                <li> Développer des scripts Python pour automatiser le traitement de données provenant de systèmes de télédétection pour cartographier les inondations </li>
-                <li> Travailler avec des librairies de système d'information géographique tel que GDAL, ArcGIS et PCI </li>
-                <li> Remanier et améliorer du code pour adapter la base de code EGS aux exigences changeantes </li>
-                <li> Documenter et organiser des données pour traiter les images provenant de satellites Radarsat-2, Sentinel-1 et RCM </li>
-                <li> Traiter et filtrer des Rasters pour obtenir des polygones pouvant être superposés sur des cartes géographiques </li>
-                <li> Développer des tests unitaires utilisant la librairie Python Unittest </li>
-            </ul>
-
-            <h2> Assistant chercheur, Sciences informatiques </h2>
-            <p> Université d’Ottawa, VIVA Lab, Ottawa, Ontario <br> juin 2017 - août 2018 </p>
-            <ul>
-                <li> Effectuer le prétraitement de données pour la recherche en intelligence artificielle sur la vision informatique </li>
-                <li> Manipuler des fichiers Json et créer des scripts sur le contrôle de base de données locales en Python </li>
-                <li> Extraire et traiter des images avec OpenCV </li>
-                <li> Travailler avec des librairies python tel que PIL, matplotlib et numpy </li>
+                <li> Étudier la relativité restreinte et la physique nucléaire </li>
+                <li> Analyser les principes de chimie, la vitesse de réaction et l’équilibre chimique en laboratoire </li>
+                <li> Classer et identifier la caractérisation structurale des composés organiques </li>
             </ul>
 
             <h1> Expérience de travail supplémentaire </h1>
@@ -140,7 +143,7 @@
             <h2> Chef d’équipe, Cuisine </h2>
             <p> Restaurant A&W, Gatineau, Québec <br> juin 2015 - mai 2017 </p>
             <ul>
-                <li> Développer la gestion en prennant des décisions pour le bon fonctionnement de la cuisine </li>
+                <li> Développer la gestion en prenant des décisions pour le bon fonctionnement de la cuisine </li>
                 <li> Faire preuve de leadership en distribuant des responsabilités liées au travail </li>
             </ul>
 
