setting env, project update & bug correction

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div id="presentation">
 
             <div id="myPicture"> 
-                <img src="me.jpg"/>
+                <img src="picture/me.jpg"/>
             </div>
 
             <div class="text" lang="en"> 
