--- a/project.html
+++ b/project.html
@@ -20,7 +20,7 @@
 
     <body>
 
-        <div id="navbar">
+        <header id="navbar">
             <div id="navHeader">
                 <span lang="en">Projects</span> <span lang="fr">Projets</span>
                 <button id="toggleLang" style="float:right;">
@@ -36,7 +36,7 @@
                     <li class="right"> <a href="https://github.com/SimonPaquette" target="_blank"> GitHub </a> </li>
                 </ul>
             </nav>
-        </div>
+        </header>
 
         <div id="projects">
 
